--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -142,9 +142,6 @@
       --background-color: #f2fbf7;
       margin:auto 0;
     }
-    .sidenav{
-      z-index: 100;
-    }
 
 
 
@@ -163,7 +160,7 @@
       </paper-toolbar>
       
       <div id = 'content' class="fit">
-      <div id='navigation'><span class='nav-header'>RESEARCH</span>
+      <div style="margin-top: 50px" id='navigation'><span class='nav-header'>RESEARCH</span>
         <paper-menu fallback-selection="editor" 
                     selected="{{menuSelected}}" 
                     attr-for-selected="menu-panel">
