--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -11,10 +11,9 @@
 <link rel="import" href="../../../bower_components/iron-icons/image-icons.html">
 <dom-module id="aq-sub-toolbar">
     <template>
-        <link rel="stylesheet" href="../common/sub-toolbar.css">
         <style is="custom-style">
             .toolbar {
-                height: 42px;
+                height: var(--toolbar-height,42px);
                 width: 100%;
                 margin-bottom: 20px;
                 margin-top:0px;
@@ -23,7 +22,7 @@
                 display: flex;
                 align-items: center;
                 position: fixed;
-                /*z-index: 20;*/
+                z-index: 1;
             }
 
             ::content #menu-icons {
