--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -49,8 +49,6 @@
 
         paper-checkbox {
             --paper-checkbox-checked-color: #cc6666;
-            -- #24293d;
-            -- #99ced4;
             /*z-index: 10;*/
         }
 
@@ -78,6 +76,7 @@
             /*z-index: 1;*/
             width: 100%;
             text-align: center;
+            pointer-events: none;
         }
 
         .strategy-desc-text {
@@ -117,6 +116,7 @@
         .st-li-header {
             font-weight: 300;
             font-size: 0.8em;
+            display: inline;
         }
         .st-li-detail {
             font-weight: 400;
