--- a/src/components/common/announcement-card.html
+++ b/src/components/common/announcement-card.html
@@ -13,6 +13,7 @@
                 box-shadow: 0 3px 8px rgba(0,0,0,0.3);
                 border-radius: 2px;
                 flex-direction: column;
+                background-color: #fff;
             }
             .header , .sub-header{
                 font-family: 'Lato' , sans-serif;
