--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -1,4 +1,3 @@
-
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
@@ -8,48 +7,51 @@
 <link rel="import" href="./aq-community-postdetail-content.html">
 
 <dom-module id="aq-community-previewpost">
-    
-    <style  include="iron-flex iron-flex-alignment iron-positioning">
+
+    <style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
     <style>
         #previewContainer {
-            width:90%; 
-            margin:0 auto;
-            margin-top:30px; 
+            width: 90%;
+            margin: 0 auto;
+            margin-top: 30px;
         }
 
         #postNbacktest {
-            width:100%; 
-            --height:30px; 
-            margin-bottom:10px;
+            width: 100%;
+            --height: 30px;
+            margin-bottom: 10px;
         }
 
         paper-button {
             /*border: 1px solid #24293d;*/
-            height:30px;
+            height: 30px;
             font-size: 13px;
         }
 
-        #buttons{
+        #buttons {
             margin-bottom: 30px;
             margin-top: 30px;
         }
-        aq-community-postdetail-header{
+
+        aq-community-postdetail-header {
             margin-top: 30px;
         }
 
     </style>
 
     <template>
-  
+
         <div class="layout vertical flex" id="previewContainer">
-            <div class="layout horizontal">
-                <div class="flex"></div>
-                <paper-button raised noink on-tap='onEdit'>Edit</paper-button>
-                <paper-button raised noink on-tap='onSubmit'>Submit</paper-button>
-            </div>
-            
+            <template is="dom-if" if="[[!disableButtons]]">
+                <div class="layout horizontal">
+                    <div class="flex"></div>
+                    <paper-button raised noink on-tap='onEdit'>Edit</paper-button>
+                    <paper-button raised noink on-tap='onSubmit'>Submit</paper-button>
+                </div>
+            </template>
+
             <template is='dom-if' if='[[reply]]'>
                 <aq-community-postdetail-content post-content="[[threadData]]"></aq-community-postdetail-content>
             </template>
@@ -57,41 +59,49 @@
             <template is='dom-if' if='[[!reply]]'>
                 <aq-community-postdetail-header preview=1 post-header="[[threadData]]"></aq-community-postdetail-header>
             </template>
-            
-            <div id='buttons' class="layout horizontal">
-                <div class="flex"></div>
-                <paper-button raised noink on-tap='onEdit'>Edit</paper-button>
-                <paper-button raised noink on-tap='onSubmit'>Submit</paper-button>
-            </div>   
 
-        </div> 
+            <template is="dom-if" if="[[!disableButtons]]">
+                <div class="layout horizontal">
+                    <div class="flex"></div>
+                    <paper-button raised noink on-tap='onEdit'>Edit</paper-button>
+                    <paper-button raised noink on-tap='onSubmit'>Submit</paper-button>
+                </div>
+            </template>
+
+        </div>
 
     </template>
 
     <script>
-      Polymer({
-        is:'aq-community-previewpost',
+        Polymer({
+            is: 'aq-community-previewpost',
 
-        properties :{
-          
-          threadData:Object,
+            properties: {
 
-          reply:{
-            type:Boolean,
-            value:false,
-          },
+                threadData: Object,
 
-        },
+                reply: {
+                    type: Boolean,
+                    value: false,
+                },
+                disableButtons: {
+                    type: Boolean,
+                    value: false
+                }
 
-        onEdit: function() {
-          this.fire('edit-clicked');
-        },
+            },
+            onEdit: function () {
+                this.fire('edit-clicked');
+            },
 
-        onSubmit: function() {
-            this.fire('submit-clicked');
-        },
+            onSubmit: function () {
+                this.fire('submit-clicked');
+            },
+            editClicked: function () {
+                alert("Edit Clicked");
+            }
 
-      });
+        });
     </script>
 
 </dom-module>  
