--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -44,7 +44,7 @@
       overflow: auto;
       -webkit-overflow-scrolling: touch;
       --height:100%;
-      background-color:#fff;
+      background-color:#fafafa;
     }
 
   </style>
