Modified aq-sub-toolbar to actual toolbar (no need for z-index).
**SEARCH features and CSS needs to be fixed!!

--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -107,7 +107,7 @@
 			<div id='container'>
 				<template is='dom-if' if="[[!showComparison]]">
 
-					<p>All Backtests for <i>{{strategyName}}</i></p>
+					<!--p>All Backtests for <i>{{strategyName}}</i></p-->
 
 					<div class="layout horizontal wrap flex around-justified itemcontainer" >
 				
