--- a/src/components/common/aq-sub-toolbar.html
+++ b/src/components/common/aq-sub-toolbar.html
@@ -1,42 +1,35 @@
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/av-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/social-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/communication-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/places-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/notification-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/device-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/maps-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/editor-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/hardware-icons.html">
-<link rel="import" href="../../../bower_components/iron-icons/image-icons.html">
+<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+
+<link rel="import" href="../../../bower_components/paper-toolbar/paper-toolbar.html">
+
 <dom-module id="aq-sub-toolbar">
     <template>
+        <style include="iron-flex iron-flex-alignment iron-positioning">
+        </style>
+
         <style is="custom-style">
             .toolbar {
                 height: var(--toolbar-height,42px);
                 width: 100%;
-                margin-bottom: 20px;
+                margin-bottom: 5px;
                 margin-top:0px;
                 background-color: #e9e9e9;
                 box-shadow:0 4px 8px rgba(0,0,0,0.2);
-                display: flex;
                 align-items: center;
-                position: fixed;
-                z-index: 1;
             }
 
             ::content #menu-icons {
-                position:fixed;
-                right:20px;
+                margin-right: 30px;
             }
 
-            ::content .iconButton {
+            ::content #menu-icons.iconButton {
                 padding:5px;
                 width:35px;
                 margin-right: 5px;
                 margin-left: 5px;
-                color: #cc6666;;
-                --paper-icon-button-disabled:{
+                color: #cc6666;
+                --paper-icon-button-disabled: {
                     color: #cacaca !important;
                 };
                 --paper-icon-button-disabled-text:grey;
@@ -54,7 +47,8 @@
                 margin-left: 10px;
             }
         </style>
-        <div class="toolbar">
+
+        <div class="toolbar layout horizontal">
             <content id="content"></content>
         </div>
 
@@ -62,7 +56,6 @@
     <script>
         Polymer({
             is:"aq-sub-toolbar",
-
         })
     </script>
 </dom-module>
