--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -3,6 +3,7 @@
 <link rel='import' href='../../../bower_components/app-route/app-route.html'>
 <link rel='import' href='../../../bower_components/app-route/app-location.html'>
 <link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
+<link rel='import' href='../../../bower_components/paper-header-panel/paper-header-panel.html'>
 
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel="import" href="../common/aq-loading-progress.html">
@@ -135,63 +136,122 @@
         hr{
             border: 1px solid #BDBDBD;
         }
+
+        #searchbox {
+            height: 32px;
+            -webkit-appearance: none;
+            line-height: 46px;
+            border: 0;
+            margin: 0;
+            padding-left: 30px;
+            border: 1px solid #e5e5e5;
+            @apply(--paper-font-body1);
+            width: 80%;
+            font-size: 14px;
+            /*z-index: 2;*/
+            background-color: #fff;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+            transition: all 0.4s ease-in-out;
+        }
+
+        #searchbox:focus {
+            outline: 0;
+            background-color: #f7f7f7;
+        }
+
+        #searchbox::-webkit-search-cancel-button {
+            position: relative;
+            right: 15px;
+        }
+        .search-bar {
+            width: 95%;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            margin-top: 30px;
+            position: relative;
+        }
+
+        paper-button {
+            border: none;
+            font-size: 13px;
+            background-color: teal;
+            color: #fff;
+            padding: 0 20px;
+            border-radius: 2px;
+            height: 35px;
+        }
     </style>
 
     <template>
         <!--iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query-->
-        <aq-check-authentication id='authItem'></aq-check-authentication>
-        <app-location route="{{route}}" use-hash-as-path></app-location>
-        <iron-signals on-iron-signal-strategy-added='onStrategyAdded'></iron-signals>
+      <aq-check-authentication id='authItem'></aq-check-authentication>
+      <app-location route="{{route}}" use-hash-as-path></app-location>
+      <iron-signals on-iron-signal-strategy-added='onStrategyAdded'></iron-signals>
 
-        <iron-signals on-iron-signal-backtest-added='onBacktestAdded'></iron-signals>
+      <iron-signals on-iron-signal-backtest-added='onBacktestAdded'></iron-signals>
 
-        <iron-signals on-iron-signal-backtest-deleted='onBacktestDeleted'></iron-signals>
+      <iron-signals on-iron-signal-backtest-deleted='onBacktestDeleted'></iron-signals>
 
-        <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
+      <iron-signals on-iron-signal-dirtybit='onSetDirtyBit'></iron-signals>
 
-        <app-route
-                route="{{route}}"
-                pattern="/dashboard/editor"
-                query-params="{{queryParams}}">
-        </app-route>
+      <app-route
+              route="{{route}}"
+              pattern="/dashboard/editor"
+              query-params="{{queryParams}}">
+      </app-route>
 
-        <iron-ajax
-                url=""
-                method='GET'
-                params="[[searchParam]]"
-                id='getStrategiesQuery'
-                handle-as="json"
-                on-response="onGetStrategiesResponse"
-                on-error="onGetStrategiesError"
-                headers='{{header}}'
-                debounce-duration="300"
-                loading='{{loading}}'>
-        </iron-ajax>
+      <iron-ajax
+              url=""
+              method='GET'
+              params="[[searchParam]]"
+              id='getStrategiesQuery'
+              handle-as="json"
+              on-response="onGetStrategiesResponse"
+              on-error="onGetStrategiesError"
+              headers='{{header}}'
+              debounce-duration="300"
+              loading='{{loading}}'>
+      </iron-ajax>
 
-        <iron-ajax
-                url="[[computPostDeleteStrategyUrl(deleteId)]]"
-                method='DELETE'
-                id='deleteStrategyQuery'
-                handle-as="json"
-                on-response="onDeleteStrategyResponse"
-                on-error="onDeleteStrategyError"
-                headers='{{header}}'
-                debounce-duration="300">
-        </iron-ajax>
+      <iron-ajax
+              url="[[computPostDeleteStrategyUrl(deleteId)]]"
+              method='DELETE'
+              id='deleteStrategyQuery'
+              handle-as="json"
+              on-response="onDeleteStrategyResponse"
+              on-error="onDeleteStrategyError"
+              headers='{{header}}'
+              debounce-duration="300">
+      </iron-ajax>
 
-        <!--template is='dom-if' if='{{isActive(active, subroute)}}'-->
+      <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
+        
+      <div class="fit">   
+        <paper-header-panel fixed mode="seamed">
 
-        <aq-loading-progress loading='{{loading}}'></aq-loading-progress>
-        <aq-editor-home-menu check-all="{{checkAll}}" active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
+        <aq-editor-home-menu check-all="{{checkAll}}" 
+                active-delete="[[hasCheckedStrategies(checkedCount)]]"
+                class="paper-header">  
+        </aq-editor-home-menu>
 
         <template is='dom-if' if='{{!loading}}'>
             <div id='container'>
-                <div id="ifsearch">
+                <div class="search-bar">
+                  <input id="searchbox" placeholder="Search your strategy" class="flex"
+                         value="{{searchText::change}}"
+                         on-keydown="checkForKeys" on-blur='blur'>
+                  <paper-button raised class="btn search-btn" on-tap="search">Search</paper-button>
+               </div>
+
+                <div id='ifsearch'>
                     <p class="strategy-result">Strategy results for
                         <span class="search-string">"[[searchParam.search]]"</span>
                     </p>
                     <hr>
                 </div>
+
                 <div class="strategy-container">
                     <template is="dom-repeat" items="{{strategies}}" id='strategyList'>
                         <aq-editor-home-strategy-item
@@ -205,21 +265,20 @@
                 <template is='dom-if' if="[[!hasStrategies(strategies, searchParam)]]">
                     <p class="self-center"> No Strategies Yet!! <a href='/dashboard/editor?create=1'>Click Here</a></p>
                 </template>
-
-                <aq-delete-dialog id="dialog" heading="Delete Strategies"
-                                  message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"
-                                  cancel="Cancel"
-                                  accept="OK">
-                </aq-delete-dialog>
-
-                <aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
-
-                <aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
-
-            </div>
+          </div>    
         </template>
-        <!--/template-->
+        </paper-header-panel>
+      </div>
 
+      <aq-delete-dialog id="dialog" heading="Delete Strategies"
+                        message="Are you sure to delete {{checkedCount}} strateg[[getMessageSuffix(checkedCount)]]?"
+                        cancel="Cancel"
+                        accept="OK">
+      </aq-delete-dialog>
+
+      <aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
+
+      <aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
     </template>
 
     <script>
@@ -501,8 +560,10 @@
                 searchtext = e.detail.searchtext;
 
                 if (searchtext != "") {
+                    this.ifsearch == true;
                     this.$$('#ifsearch').style.display = 'block';
                 } else {
+                    this.ifsearch == false;
                     this.$$('#ifsearch').style.display = 'none';
                 }
 
