1. Improved Strategy item layout when narrow layout 2. Fixed dialog backdrop issue. 3. CSS changes to community item

--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -190,7 +190,7 @@
             
             <div class="bar"></div>
             
-            <div class="layout horizontal">
+            <div class="layout horizontal center">
                   <profile-img id='img' class="self-start"
                                letter="[[getInitials(thread.user.firstName, thread.user.lastName)]]"></profile-img>
 
