--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -5,15 +5,19 @@
 <link rel='import' href='../common/aq-check-authentication.html'>
 <link rel='import' href='../common/aq-cumret-linechart.html'>
 <link rel='import' href='../common/aq-aggregatedreturns-barchart.html'>
-
+<link rel="import" href="../../../bower_components/paper-card/paper-card.html">
 <link rel='import' href='../../icons/aq-iconset.html'>
 <link rel="import" href="../code-editor-element/code-editor-element.html">
 <script src="../code-editor-element/diff-match-patch.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 <dom-module id='aq-analyze-backtest-comparison-item'>
     <style include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
     <style>
+        :host{
+            font-family: 'Lato',sans-serif;
+        }
         paper-icon-button {
             width: 35px;
             height: 35px;
@@ -69,12 +73,11 @@
         }
 
         #comparison-return {
+            background-color: transparent;
             margin-top: 0px;
             margin: 0 auto;
-            --width: 95%;
-            padding: 10px;
-            border: 2px solid teal;
-            background-color: white;
+            width: 95%;
+            /*padding: 10px;*/
         }
 
         paper-tab:hover {
@@ -104,41 +107,88 @@
             padding: 10px;
         }
 
+        .goBackButton {
+            padding-left: 20px;
+        }
+        .back-btn-text{
+            font-size: 14px;
+            color:#cc4444;
+            position: relative;
+            /*left:-10px;*/
+        }
+        .goBackButton > paper-icon-button{
+            color:#cc4444;
+            transform:scale(1.6,1.6);
+        }
+        .pages-container{
+            width: 95%;
+            border-radius: 2px;
+        }
+        .tabs-container{
+            margin-bottom: 20px;
+        }
+        .comparison-text{
+            margin-left: 20px;
+            color:#000;
+            font-size:13px;
+        }
+        .backtest-item{
+            font-size: 14px;
+            font-weight: 700;
+        }
+        .vs-text{
+            font-weight: 400;
+            color:#8c8c8c;
+        }
+        .strategy-name{
+            color:#cc4444;
+            font-weight: 700;
+        }
+
     </style>
 
     <template>
         <aq-check-authentication id='authItem'></aq-check-authentication>
 
         <div class="goBackButton layout horizontal">
-            <paper-icon-button noink id='backButton' class="self-center" title="Go Back" icon="aq-icons:arrow-back"
+            <paper-icon-button noink id='backButton' class="self-center" title="Go Back" icon="chevron-left"
                                on-tap="goBackAllBacktests">
             </paper-icon-button>
-            <p class="self-center">Back to All Backtests</p>
+            <p class="self-center back-btn-text">Back</p>
+            <p class="comparison-text">
+                <template is="dom-repeat" items="{{indexArray}}">
+                    <span class="backtest-item">{{item}}</span>
+                    <template is="dom-if" if="[[showVs(index,indexArray)]]">
+                        <span class="vs-text">vs</span>
+                    </template>
+                </template>
+                <span class="vs-text">comparison for <span class="strategy-name">{{strategyName}}</span></span>
+            </p>
         </div>
 
-        <div id='comparison-return'>
+        <div id='comparison-return' class="layout vertical center">
 
-            <div class="layout horizontal">
-                <p>Comparing Backtests for <i>{{strategyName}}</i></p>
-                <div class="flex"></div>
+            <div class="layout horizontal tabs-container">
+                <!--<p>Comparing Backtests for <i>{{strategyName}}</i></p>-->
                 <div class="sub_header">
                     <paper-tabs noink selected={{graphType1}}>
                         <paper-tab>Total Return</paper-tab>
                         <paper-tab>Monthly Returns</paper-tab>
-                        <paper-tab>Code Compare</paper-tab>
+                        <!--<paper-tab>Code Compare</paper-tab>-->
                         <!--paper-tab>Risk Metrics</paper-tab-->
                     </paper-tabs>
                 </div>
             </div>
+            <paper-card class="pages-container">
+                <iron-pages class="pages_select" selected={{graphType1}} on-iron-resize='onResize'>
 
-            <iron-pages class="pages_select" selected={{graphType1}} on-iron-resize='onResize'>
-
-                <div id='cumRetLineChartDiv'></div>
-                <div id='barChartDiv'></div>
-                <div id='codeCompare'>
-                    <code-editor-element></code-editor-element>
-                </div>
-            </iron-pages>
+                    <div id='cumRetLineChartDiv'></div>
+                    <div id='barChartDiv'></div>
+                    <div id='codeCompare'>
+                        <code-editor-element></code-editor-element>
+                    </div>
+                </iron-pages>
+            </paper-card>
         </div>
 
         <div id='comparison-risk' class="layout horizontal flex">
@@ -190,6 +240,11 @@
                     type: Number,
                     value: 0,
                 },
+                indexArray:{
+                    type:Array,
+                    value:[],
+                    notify:true
+                },
 
                 header: Object,
 
@@ -199,6 +254,7 @@
                 this.async(this.resetComparison, 200);
                 if (this.active) {
                     this.async(this.doComparison, 200);
+                    console.log(this.indexArray);
                 }
 
             },
@@ -217,6 +273,7 @@
             },
 
             doComparison: function () {
+                console.log(this.compareItems);
                 for (var key in this.compareItems) {
                     if (this.compareItems[key]) {
                         if (!this.backtests[key]) {
@@ -243,7 +300,8 @@
                 console.log(backtestResponseArray);
                 if (Object.keys(this.compareItems).length === backtestResponseArray.length) {
                     console.log("Request Completed");
-                    console.log(backtestResponseArray[0].code);
+//                    console.log(backtestResponseArray[0].code);
+                    console.log(backtestResponseArray)
                 }
                 var code_editor = document.querySelector('code-editor-element');
                 var codeLeft = "var a = {\n propertyA: 12,\n propertyB: 123456, \n propertyC: 321, \n}";
@@ -252,7 +310,7 @@
                 code_editor.setCodeLeft(codeLeft);
                 code_editor.setCodeRight(codeRight);
                 setTimeout(function () {
-                    code_editor.setCodeLeft(codeLeft+codeRight);
+                    code_editor.setCodeLeft(codeLeft + codeRight);
                 }, 3000);
             },
 
@@ -391,6 +449,10 @@
                     this.$$('aq-aggregatedreturns-barchart').resizeChart();
                 }
             },
+            showVs:function (index,array) {
+                return index < array.length - 1;
+
+            }
 
         });
     </script>
